Testing fixtures and CLI niceness.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pyelftools = "0.29"
 black = "23.9.1"
 tqdm = "4.66.1"
 pytest = "^7.4.2"
+click = "^8.1.7"
 
 [tool.poetry.scripts]
 fuzzywuzzy = 'fuzzer:cli'
