--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ black = "23.9.1"
 tqdm = "4.66.1"
 pytest = "^7.4.2"
 click = "^8.1.7"
+python-magic = "^0.4.27"
 
 [tool.poetry.scripts]
 fuzzywuzzy = 'fuzzer:cli'
