--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,8 @@ jobs:
           sudo dpkg --add-architecture i386
           sudo apt-get -y update
           sudo apt-get install -y libc6:i386 gcc-multilib g++-multilib
+      - name: Install poetry
+        run: pipx install poetry
       - name: Set up Python 3.12
         uses: actions/setup-python@v3
         with:
@@ -27,7 +29,6 @@ jobs:
           cache: "poetry"
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip poetry
           poetry install
       - name: Test with pytest
         run: |
