--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,19 @@ jobs:
           cache: "poetry"
       - name: Install dependencies
         run: |
-          poetry install
+          poetry install --no-interaction
+      # - name: Lint with ruff
+      #   continue-on-error: true
+      #   run: |
+      #     poetry run ruff --output-format=github .
       - name: Test with pytest
+        continue-on-error: true
         run: |
-          poetry run pytest
+          poetry run pytest --junitxml=junit/test-results.xml
+      - name: Upload test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytest-results
+          path: junit/test-results.xml
+        # Use always() to always run this step to publish test results when there are test failures
+        if: ${{ always() }}
